Fixes collapsed sidebar user display

--- a/server/scss/_chat.scss
+++ b/server/scss/_chat.scss
@@ -19,17 +19,27 @@
 .bar-btn {
   background-color: $dark2;
   border-bottom: 0.1px solid #3f434a;
+  display: flex;
+  flex-direction: column;
   height: 80px;
+  padding-top: 20px;
+  padding-left: 15px;
+
+  * {
+    display: block;
+    position: absolute;
+  }
 
   i {
     color: $gray1;
-    text-align: center;
+    margin-bottom: 20px;
   }
 
   .badge {
-    width: 60%;
+    // width: 60%;
   }
 }
+
 
 .chat-container {
   background-color: #fff;
@@ -42,6 +52,14 @@
   -webkit-transition: all 300ms cubic-bezier(0.455, 0.03, 0.515, 0.955);
   transition: all 300ms cubic-bezier(0.455, 0.03, 0.515, 0.955);
   transform-origin: right;
+
+  p {
+    font-family: $content-font;
+  }
+  
+  li {
+    font-family: $title-font;
+  }
 
   @include large-desktop {
     flex: 0 0 400px;
