--- a/server/scss/_env_controls.scss
+++ b/server/scss/_env_controls.scss
@@ -6,18 +6,21 @@
 
 .gist-button {
   display: inline-block;
-  // position: absolute;
+  position: absolute;
 }
 
 .gist-container {
-  display: flex;
+  // display: flex;
   // position: relative;
 }
 
 .gist-input {
   @include form-input;
   color: $gray1;
-  width:80%;
+  font-family: $title-font;
+  height: 30px;
+  width: 200px;
+  margin-right: 30px;
 }
 
 .env-btn {
