--- a/server/scss/_mixins.scss
+++ b/server/scss/_mixins.scss
@@ -96,9 +96,9 @@
 @mixin avatar-size {
   background-color: #fff;
   border-radius: 50%;    
-  height: 80px;
+  height: 60px;
   padding: 5px;
-  width: 80px;
+  width: 60px;
 }
 
 @mixin message-container-styles {
