--- a/server/scss/_room_layout.scss
+++ b/server/scss/_room_layout.scss
@@ -6,7 +6,9 @@ html, body {
 
 main {
   width: 100%;
+  background-color: $dark3;
 }
+
 
 // #react-root {
 //   height: 100% !important;
