--- a/server/scss/_room_navbar.scss
+++ b/server/scss/_room_navbar.scss
@@ -1,5 +1,5 @@
 .room-navbar {
-  background-color: $dark3;
+  background-color: $dark2;
   display: flex;
   justify-content: space-between;
   align-items: center;
