--- a/server/scss/_users.scss
+++ b/server/scss/_users.scss
@@ -14,6 +14,8 @@
 
 .env-nav-panel {
   @include flex-clear;
+  background-color: $gray1;
+  border-radius: 5px;
 
   p {
     color: $dark2;
