--- a/server/scss/_variables.scss
+++ b/server/scss/_variables.scss
@@ -1,3 +1,9 @@
+/* FONTS */
+$logo-font: 'Lobster', cursive;
+$title-font: 'Muli', sans-serif;
+$content-font: 'Lato', sans-serif;
+
+
 /* COLORS */
 $green: #19B98B;
 $yellow: #FFCA4A;
